advantages title align fixed

--- a/css/main.css
+++ b/css/main.css
@@ -371,6 +371,12 @@ body {
   text-align: center;
 }
 
+@media only screen and (min-width: 768px) {
+  .advantages .title {
+    text-align: left;
+  }
+}
+
 .team .title {
   margin-bottom: 10px;
   color: #212121;
@@ -695,8 +701,8 @@ body {
     padding-bottom: 5px;
     color: #757575;
     font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
+    font-size: 12px;
+    line-height: 1.17;
     letter-spacing: 0.02em;
     -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
