--- a/sass/components/_title.scss
+++ b/sass/components/_title.scss
@@ -7,6 +7,10 @@
     @include font(14px, 16px);
     text-transform: uppercase;
     text-align: center;
+
+    @include screen(tablet) {
+      text-align: left;
+    }
   }
 
   .team & {
