--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -256,8 +256,7 @@
 
     color: $primary-text-color;
     font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
+    @include font(12px, 14px);
     letter-spacing: 0.02em;
 
     @include transition-1-selector(color);
