--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -90,8 +90,7 @@
 
     color: $main-bg-color;
     background-color: rgba(33, 150, 243, 0.9);
-    font-size: 18px;
-    line-height: 1.56;
+    @include font(18px, 28px);
     text-align: center;
 
     @include transition-1-selector(transform);
