--- a/sass/layout/_what-we-do.scss
+++ b/sass/layout/_what-we-do.scss
@@ -23,8 +23,7 @@
   color: $main-bg-color;
 
   font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
+  @include font(14px, 16px);
   text-align: center;
   text-transform: uppercase;
 }
